--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1 class="specialsheadline">Weekly Specials</h1>
       <div class="cards1">
         <a class="card1">
-          <img src="assets/3-min.jpg" class="cardImage2" alt="sushi" />
+          <img src="assets/3.AVIF" class="cardImage2" alt="sushi" />
           <div class="cardOverlay1">
             <div class="cardHeader1">
               <div class="cardHeaderText1">
@@ -72,7 +72,7 @@
       </div>
       <div class="cards1">
         <a class="card1">
-          <img src="assets/4-min.jpg" class="cardImage2" alt="sushi" />
+          <img src="assets/4.AVIF" class="cardImage2" alt="sushi" />
           <div class="cardOverlay1">
             <div class="cardHeader1">
               <div class="cardHeaderText1">
