--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <!--  BACKGROUND  -->
 
-  <body class="bg1" background="sushi1.0.jpg">
+  <body class="bg1" background="assets/sushi1.0.AVIF">
     <!--   NAV BAR  -->
     <nav>
       <div class="navbar">
         <div class="logo">
-          <img class="hero" src="osaka.jpg" alt="osaka" />
+          <img class="hero" src="assets/osaka.AVIF" alt="osaka" />
         </div>
         <div class="link">
           <a href="index.html">Home</a>
@@ -101,16 +101,16 @@
 
       <footer class="contactMe">
         <a href="https://www.youtube.com"
-          ><img src="assets/youtube.png" width="50px" alt="youtube"
+          ><img src="assets/youtube.AVIF" width="50px" alt="youtube"
         /></a>
         <a href="https://www.instagram.com/"
-          ><img src="assets/insta.png" width="50px" alt="instagram"
+          ><img src="assets/insta.AVIF" width="50px" alt="instagram"
         /></a>
         <a href="https://www.twitter.com"
-          ><img src="assets/twitter.png" width="50px" alt="twitter"
+          ><img src="assets/twitter.AVIF" width="50px" alt="twitter"
         /></a>
         <a href="https://www.facebook.com"
-          ><img src="assets/FB.png" width="50px" alt="facebook"
+          ><img src="assets/FB.AVIF" width="50px" alt="facebook"
         /></a>
       </footer>
     </section>
