--- a/menu.html
+++ b/menu.html
@@ -13,13 +13,13 @@
 </head>
 <!--  BACKGROUND  -->
 
-<body class="bg2" background="sushi2.jpg">
+<body class="bg2" background="assets/sushi2.AVIF">
   <!--   NAV BAR  -->
   <nav>
     <div class="navbar">
       <div class="logo">
         <a href="index.html">
-          <img class="hero" src="osaka.jpg" alt="osaka">
+          <img class="hero" src="assets/osaka.AVIF" alt="osaka">
       </div>
       <div class="link">
         <a href="index.html">Home</a>
@@ -125,12 +125,20 @@
 
   <!--   FOOTER -->
 
-  <Footer class="contactMe">
-    <a href="https://www.youtube.com"><img src="assets/youtube.png" width="50px" alt="youtube"></a>
-    <a href="https://www.instagram.com/"><img src="assets/insta.png" width="50px" alt="instagram"></a>
-    <a href="https://www.twitter.com"><img src="assets/twitter.png" width="50px" alt="twitter"></a>
-    <a href="https://www.facebook.com"><img src="assets/FB.png" width="50px" alt="facebook"></a>
-  </Footer>
+  <footer class="contactMe">
+    <a href="https://www.youtube.com"
+      ><img src="assets/youtube.AVIF" width="50px" alt="youtube"
+    /></a>
+    <a href="https://www.instagram.com/"
+      ><img src="assets/insta.AVIF" width="50px" alt="instagram"
+    /></a>
+    <a href="https://www.twitter.com"
+      ><img src="assets/twitter.AVIF" width="50px" alt="twitter"
+    /></a>
+    <a href="https://www.facebook.com"
+      ><img src="assets/FB.AVIF" width="50px" alt="facebook"
+    /></a>
+  </footer>
 </body>
 
 </html>
