--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
 
   <section class="product-list">
     <div>
-      <h1 class="align-center">Products</h1>
+      <h1 class="align-center">Menu</h1>
     </div>
 
     <div class="product-container">
