--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Dear Osaka</title>
-  <!--   <link href="style.css" rel="stylesheet" type="text/css" /> -->
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -43,7 +42,7 @@
         <div class="image"><img src="assets/1.AVIF" alt="Classic Roll A" />
         </div>
         <p class="mp">$15.99</p>
-        <!--   THIS IS ONLY HERE SO YOU GUYS KNOW MY BUTTONS WORK IF NEEDED      -->
+        <!--   THIS IS HERE SO YOU GUYS KNOW MY BUTTONS WORK IF NEEDED      -->
         <a class="buy-button"
           href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/31458132593204687567323762054544922945513441433473574696766688210870618554369">
           Buy Now
